Fix content top cutoff on scroll

--- a/frontend/src/stylesheets/components/challenge/_challenge_index.scss
+++ b/frontend/src/stylesheets/components/challenge/_challenge_index.scss
@@ -68,22 +68,24 @@
   width: 100%;
 }
 .challenge-photos {
-  height: 700px;
-  // overflow-x: hidden;
-  // overflow-y: scroll;
+  height: 100%;
+  overflow-x: visible;
+  overflow-y: scroll;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   align-items: center;
 }
-.challenge-photo {
+.challenge-photo img {
   height: 300px;
-  width: 70%;
+  width: 300px;
   background-color: white;
-  border: 2px solid black;
+  border: 5px inset;
+  border-radius: 25px;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 5px;
+  object-fit: cover;
 }
 .challenge-toggle {
   background-color: $yellow;
